--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AcousticChallengeAngular</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/">
+
+  <meta name="application-name" content="Acoustic Content" />
+
+  <title>Acoustic Content</title>
+
+  <link rel="icon" type="image/png" href="/assets/images/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon-128.png" sizes="128x128" />
+
+  <link href="https://fonts.googleapis.com/css?family=Neuton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
