--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
 
-  <meta name="application-name" content="Acoustic Content" />
+  <meta name="application-name" content="Acoustic Content Renderer" />
+  <meta name="author" content="http://github.com/lpelos" />
 
-  <title>Acoustic Content</title>
+  <title>Acoustic Content Renderer</title>
 
   <link rel="icon" type="image/png" href="/assets/images/favicon-196x196.png" sizes="196x196" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
@@ -15,8 +16,8 @@
   <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-128.png" sizes="128x128" />
 
-  <link href="https://fonts.googleapis.com/css?family=Neuton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Neuton&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
