--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <meta name="author" content="http://github.com/lpelos" />
 
   <title>Acoustic Content Renderer</title>
+  <meta
+    name="description"
+    content="a SPA application that consumes Acoustic Content APIs and renders the content returned using Angular"
+  />
 
   <link rel="icon" type="image/png" href="/assets/images/favicon-196x196.png" sizes="196x196" />
   <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
